--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Exercise to build a webpack boilerplate",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "testw": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
     "server": "node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "csv-loader": "^3.0.5",
     "express": "^4.18.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.1.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
@@ -33,6 +35,7 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
+    "jsdom": "^20.0.1",
     "lodash": "^4.17.21"
   }
 }
