--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack serve --open",
     "server": "node server.js",
     "build": "webpack",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,13 @@
   },
   "homepage": "https://github.com/AlejandraKeber/Webpack-Setup#readme",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "css-loader": "^6.7.1",
     "csv-loader": "^3.0.5",
     "express": "^4.18.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
@@ -37,5 +39,9 @@
   "dependencies": {
     "jsdom": "^20.0.1",
     "lodash": "^4.17.21"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "verbose": true
   }
 }
